cmake_minimum_required(VERSION 2.8.12)
project(lib)

add_subdirectory(utils)
add_subdirectory(tools)
add_subdirectory(wSocket)
add_subdirectory(wType)
add_subdirectory(wDispatcher)
add_subdirectory(wContainer)
add_subdirectory(wSsh)
add_subdirectory(wModel)
add_subdirectory(wController)
add_subdirectory(wServerUtils)
add_subdirectory(fontParser)
