cmake_minimum_required(VERSION 2.8.12)

configure_file(label.js label.js)
configure_file(view.js view.js)
configure_file(layout.js layout.js)
configure_file(gridLayout.js gridLayout.js)
configure_file(navigationPanel.js navigationPanel.js)
configure_file(nav.js nav.js)
configure_file(panesList.js panesList.js)
configure_file(mainLayout.js mainLayout.js)
configure_file(page.js page.js)
configure_file(pane.js pane.js)
configure_file(image.js image.js)
configure_file(button.js button.js)

add_subdirectory(helpers)
